# rllib-template

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
examples/: inference.sh  train.sh
package_name/callbacks/: test.py
package_name/environments/: test.py
package_name/models/: test.py
scripts/: inference.py  train.py
