[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "project-name"  # Change!!
version = "0.0.0"
description = "project-description"  # Change!!
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
authors = [
    { name = "yunik1004", email = "inkyuhak@gmail.com" },
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["package_name"]  # Change!!

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}
